--- a/configs/multimnist_params.yaml
+++ b/configs/multimnist_params.yaml
@@ -1,20 +1,18 @@
 task: MultiMNIST
-synthesizer: Pattern
-
-
+synthesizer: Complex
 
 batch_size: 256
 test_batch_size: 100
 lr: 0.005
 momentum: 0.9
 decay: 0.0005
-epochs: 3
+epochs: 10
 save_on_epochs: []
 optimizer: SGD
 log_interval: 300
 scheduler: False
 
-poisoning_proportion: 1.0
+poisoning_proportion: 0.5
 backdoor_label: 8
 backdoor: True
 backdoor_dynamic_position: False
@@ -27,10 +25,10 @@ log: True
 tb: False
 
 continuation: True
-max_continuation_iterations: 5
-save_continuation_on_iteration: 1
+max_continuation_iterations: 30
+save_continuation_on_iteration: 10
 stop_at: 0.001
-predictor_steps: 10
+predictor_steps: 100
 corrector_steps: 100
 
 transform_train: True
