--- a/configs/multimnist_params_backdoor.yaml
+++ b/configs/multimnist_params_backdoor.yaml
@@ -1,20 +1,21 @@
-task: MultiMNIST
-synthesizer: Pattern
+task: MultiMNISTVanilla
+synthesizer: Complex
 
 batch_size: 256
 test_batch_size: 100
-lr: 0.0001
+val_batch_size: 100
+lr: 0.0005
 momentum: 0.9
 decay: 0.0005
-epochs: 100
+epochs: 150
 save_on_epochs: []
 optimizer: SGD
 log_interval: 300
 scheduler: False
 
-poisoning_proportion: 1.0
+poisoning_proportion: 0.5
 backdoor_label: 8
-backdoor: False
+backdoor: True
 backdoor_dynamic_position: False
 
 loss_balance: MGDA
@@ -29,13 +30,14 @@ max_continuation_iterations: 100
 save_continuation_on_iteration: 10
 stop_at: 0.001
 predictor_steps: 10
-corrector_steps: 100
+corrector_steps: 10
 
 transform_train: True
 
 
 loss_tasks:
   - normal
+  - backdoor
 #  - neural_cleanse
 #  - sentinet_evasion
 
