--- a/configs/multimnist_params_no_backdoor.yaml
+++ b/configs/multimnist_params_no_backdoor.yaml
@@ -1,12 +1,13 @@
-task: MultiMNIST
+task: MultiMNISTVanilla
 synthesizer: Pattern
 
 batch_size: 256
 test_batch_size: 100
-lr: 0.001
+val_batch_size: 100
+lr: 0.0001
 momentum: 0.9
 decay: 0.0005
-epochs: 10
+epochs: 100
 save_on_epochs: []
 optimizer: SGD
 log_interval: 300
