--- a/configs/multimnist_params_backdoor.yaml
+++ b/configs/multimnist_params_backdoor.yaml
@@ -1,5 +1,5 @@
 task: MultiMNISTVanilla
-synthesizer: Complex
+synthesizer: Summation
 
 batch_size: 256
 test_batch_size: 100
@@ -7,13 +7,13 @@ val_batch_size: 100
 lr: 0.0005
 momentum: 0.9
 decay: 0.0005
-epochs: 150
+epochs: 100
 save_on_epochs: []
 optimizer: SGD
 log_interval: 300
 scheduler: False
 
-poisoning_proportion: 0.5
+poisoning_proportion: 0.2
 backdoor_label: 8
 backdoor: True
 backdoor_dynamic_position: False
