--- a/configs/multimnist_params.yaml
+++ b/configs/multimnist_params.yaml
@@ -1,5 +1,5 @@
 task: MultiMNIST
-synthesizer: Summation
+synthesizer: SinglePixel
 
 batch_size: 512
 test_batch_size: 100
@@ -26,17 +26,17 @@ log: True
 tb: False
 
 continuation: True
-max_continuation_iterations: 10
+max_continuation_iterations: 16
 plot_continuation_on_iteration: 2
 continuation_checkpoints_at: 2
 calibration: True
-calibration_iterations: 1000
+calibration_iterations: 2000
 stop_at: 0.001
-predictor_steps: 10
+predictor_steps: 256
 predictor_lr: 0.0001
-corrector_steps: 100
+corrector_steps: 512
 corrector_lr: 0.0001
-other_direction: False
+other_direction: True
 both_directions: False
 
 transform_train: True
