--- a/configs/multimnist_params.yaml
+++ b/configs/multimnist_params.yaml
@@ -1,5 +1,6 @@
 task: MultiMNIST
-synthesizer: SinglePixel
+synthesizer: Summation
+continuation_model_path: "/scratch/hpc-lco-plessl-hpc/dvoth/backdoors101/runs/bd_model_addition_calibrated.pt.tar"
 
 batch_size: 512
 test_batch_size: 100
@@ -9,7 +10,7 @@ momentum: 0.9
 decay: 0.0005
 epochs: 10
 save_on_epochs: []
-optimizer: SGD
+optimizer: Adam
 log_interval: 300
 scheduler: False
 
@@ -29,15 +30,17 @@ continuation: True
 max_continuation_iterations: 16
 plot_continuation_on_iteration: 2
 continuation_checkpoints_at: 2
-calibration: True
+calibration: False
 calibration_iterations: 2000
 stop_at: 0.001
-predictor_steps: 256
+predictor_steps: 0
 predictor_lr: 0.0001
 corrector_steps: 512
 corrector_lr: 0.0001
-other_direction: True
+other_direction: False
 both_directions: False
+track_training: True
+count_passes: True
 
 transform_train: True
 
