Add new task types

--- a/configs/multimnist_params_clean.yaml
+++ b/configs/multimnist_params_clean.yaml
@@ -1,21 +1,23 @@
-task: MultiMNISTVanilla
-synthesizer: Complex
+task: MultiMNIST
+synthesizer: Summation
+continuation_model_path: "/scratch/hpc-lco-plessl-hpc/dvoth/backdoors101/runs/trained_models/clean_sgd.tar"
+distributed: True
 
-batch_size: 54000
-test_batch_size: 10000
-val_batch_size: 6000
+batch_size: 512
+test_batch_size: 100
+val_batch_size: 100
 lr: 0.005
 momentum: 0.9
 decay: 0.0005
-epochs: 100
+epochs: 10
 save_on_epochs: []
 optimizer: SGD
 log_interval: 300
 scheduler: False
 
-poisoning_proportion: 0.5
+poisoning_proportion: 0.8
 backdoor_label: 8
-backdoor: True
+backdoor: False
 backdoor_dynamic_position: False
 
 loss_balance: MGDA
@@ -25,12 +27,21 @@ save_model: True
 log: True
 tb: False
 
-continuation: False
-max_continuation_iterations: 10
-save_continuation_on_iteration: 2
+continuation: True
+max_continuation_iterations: 100
+plot_continuation_on_iteration: 4
+continuation_checkpoints_at: 4
+calibration: False
+calibration_iterations: 2000
 stop_at: 0.001
-predictor_steps: 1
-corrector_steps: 1
+predictor_steps: 16
+predictor_lr: 0.0001
+corrector_steps: 32
+corrector_lr: 0.0001
+other_direction: False
+both_directions: False
+track_training: True
+count_passes: True
 
 transform_train: True
 
