--- a/configs/multimnist_params_reverse_summation.yaml
+++ b/configs/multimnist_params_reverse_summation.yaml
@@ -1,6 +1,7 @@
 task: MultiMNIST
 synthesizer: Summation
-continuation_model_path: "/scratch/hpc-lco-plessl-hpc/dvoth/backdoors101/runs/bd_model_addition_calibrated.pt.tar"
+continuation_model_path: "/scratch/hpc-lco-plessl-hpc/dvoth/backdoors101/runs/trained_models/clean_sgd.tar"
+distributed: True
 
 batch_size: 512
 test_batch_size: 100
@@ -8,15 +9,15 @@ val_batch_size: 100
 lr: 0.005
 momentum: 0.9
 decay: 0.0005
-epochs: 10
+epochs: 100
 save_on_epochs: []
 optimizer: Adam
-log_interval: 300
+log_interval: 10
 scheduler: False
 
-poisoning_proportion: 0.8
+poisoning_proportion: 1.0
 backdoor_label: 8
-backdoor: True
+backdoor: False
 backdoor_dynamic_position: False
 
 loss_balance: MGDA
@@ -26,16 +27,16 @@ save_model: True
 log: True
 tb: False
 
-continuation: True
-max_continuation_iterations: 16
-plot_continuation_on_iteration: 2
-continuation_checkpoints_at: 2
+continuation: False
+max_continuation_iterations: 100
+plot_continuation_on_iteration: 4
+continuation_checkpoints_at: 4
 calibration: False
 calibration_iterations: 2000
 stop_at: 0.001
-predictor_steps: 0
+predictor_steps: 16
 predictor_lr: 0.0001
-corrector_steps: 512
+corrector_steps: 32
 corrector_lr: 0.0001
 other_direction: False
 both_directions: False
