--- a/configs/multimnist_params_summation.yaml
+++ b/configs/multimnist_params_summation.yaml
@@ -1,6 +1,6 @@
 task: MultiMNIST
 synthesizer: Summation
-continuation_model_path: "/scratch/hpc-lco-plessl-hpc/dvoth/backdoors101/runs/trained_models/summation_bd_sgd_calibrated.tar"
+continuation_model_path: "/scratch/hpc-lco-plessl-hpc/dvoth/backdoors101/runs/trained_models/summation_bd_adam_calibrated.tar"
 distributed: True
 
 batch_size: 512
@@ -11,7 +11,7 @@ momentum: 0.9
 decay: 0.0005
 epochs: 10
 save_on_epochs: []
-optimizer: SGD
+optimizer: Adam
 log_interval: 300
 scheduler: False
 
