--- a/configs/multimnist_params_summation_scalarization.yaml
+++ b/configs/multimnist_params_summation_scalarization.yaml
@@ -6,16 +6,16 @@ distributed: True
 batch_size: 512
 test_batch_size: 100
 val_batch_size: 100
-lr: 0.005
+lr: 0.0001
 momentum: 0.9
 decay: 0.0005
-epochs: 10
+epochs: 100
 save_on_epochs: []
-optimizer: SGD
+optimizer: Adam
 log_interval: 300
 scheduler: False
 
-poisoning_proportion: 0.8
+poisoning_proportion: 0.2
 backdoor_label: 8
 backdoor: True
 backdoor_dynamic_position: False
@@ -29,7 +29,7 @@ tb: False
 
 scalarization: True
 continuation: False
-max_continuation_iterations: 16
+max_continuation_iterations: 20
 plot_continuation_on_iteration: 4
 continuation_checkpoints_at: 4
 calibration: False
