--- a/configs/multimnist_params_summation_singlepixel.yaml
+++ b/configs/multimnist_params_summation_singlepixel.yaml
@@ -1,23 +1,23 @@
 task: MultiMNIST
-synthesizer: Summation
-continuation_model_path: "/scratch/hpc-lco-plessl-hpc/dvoth/backdoors101/runs/trained_models/clean_sgd.tar"
+synthesizer: SinglePixel
+continuation_model_path: "/scratch/hpc-lco-plessl-hpc/dvoth/backdoors101/runs/trained_models/summation_bd_sgd_calibrated.tar"
 distributed: True
 
 batch_size: 512
 test_batch_size: 100
 val_batch_size: 100
-lr: 0.005
+lr: 0.0001
 momentum: 0.9
 decay: 0.0005
-epochs: 10
-save_on_epochs: [0, 1]
-optimizer: SGD
+epochs: 100
+save_on_epochs: []
+optimizer: Adam
 log_interval: 300
 scheduler: False
 
-poisoning_proportion: 0.8
+poisoning_proportion: 0.2
 backdoor_label: 8
-backdoor: False
+backdoor: True
 backdoor_dynamic_position: False
 
 loss_balance: MGDA
@@ -27,16 +27,17 @@ save_model: True
 log: True
 tb: False
 
+scalarization: True
 continuation: False
-max_continuation_iterations: 100
+max_continuation_iterations: 20
 plot_continuation_on_iteration: 4
 continuation_checkpoints_at: 4
 calibration: False
 calibration_iterations: 2000
 stop_at: 0.001
-predictor_steps: 16
+predictor_steps: 256
 predictor_lr: 0.0001
-corrector_steps: 32
+corrector_steps: 512
 corrector_lr: 0.0001
 other_direction: False
 both_directions: False
