--- a/configs/multimnist_params_summation.yaml
+++ b/configs/multimnist_params_summation.yaml
@@ -1,21 +1,21 @@
 task: MultiMNIST
 synthesizer: Summation
-continuation_model_path: "/scratch/hpc-lco-plessl-hpc/dvoth/backdoors101/runs/trained_models/summation_bd_adam.tar"
+continuation_model_path: "/scratch/hpc-lco-plessl-hpc/dvoth/backdoors101/runs/trained_models/summation_bd_sgd.tar"
 distributed: True
 
 batch_size: 512
 test_batch_size: 100
 val_batch_size: 100
-lr: 0.005
+lr: 0.0001
 momentum: 0.9
 decay: 0.0005
 epochs: 10
 save_on_epochs: []
-optimizer: Adam
+optimizer: SGD
 log_interval: 300
 scheduler: False
 
-poisoning_proportion: 0.8
+poisoning_proportion: 0.5
 backdoor_label: 8
 backdoor: True
 backdoor_dynamic_position: False
@@ -31,15 +31,15 @@ continuation: True
 max_continuation_iterations: 16
 plot_continuation_on_iteration: 4
 continuation_checkpoints_at: 4
-calibration: True
+calibration: False
 calibration_iterations: 2000
 stop_at: 0.001
 predictor_steps: 256
 predictor_lr: 0.0001
-corrector_steps: 512
+corrector_steps: 1024
 corrector_lr: 0.0001
 other_direction: False
-both_directions: False
+both_directions: True
 track_training: True
 count_passes: True
 
