--- a/configs/multimnist_params_summation_less_corr.yaml
+++ b/configs/multimnist_params_summation_less_corr.yaml
@@ -1,6 +1,6 @@
 task: MultiMNIST
-synthesizer: SinglePixel
-continuation_model_path: "/scratch/hpc-lco-plessl-hpc/dvoth/backdoors101/runs/trained_models/singlepixel_bd_adam.tar"
+synthesizer: Summation
+continuation_model_path: "/scratch/hpc-lco-plessl-hpc/dvoth/backdoors101/runs/trained_models/summation_bd_sgd_calibrated.tar"
 distributed: True
 
 batch_size: 512
@@ -9,9 +9,9 @@ val_batch_size: 100
 lr: 0.005
 momentum: 0.9
 decay: 0.0005
-epochs: 100
+epochs: 10
 save_on_epochs: []
-optimizer: SGD
+optimizer: Adam
 log_interval: 300
 scheduler: False
 
@@ -34,12 +34,12 @@ continuation_checkpoints_at: 4
 calibration: False
 calibration_iterations: 2000
 stop_at: 0.001
-predictor_steps: 256
+predictor_steps: 512
 predictor_lr: 0.0001
-corrector_steps: 1024
+corrector_steps: 256
 corrector_lr: 0.0001
 other_direction: False
-both_directions: True
+both_directions: False
 track_training: True
 count_passes: True
 
